--- a/COSII/COSII_Lab1/BLLEntities/BLLEntities.csproj
+++ b/COSII/COSII_Lab1/BLLEntities/BLLEntities.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Function.cs" />
     <Compile Include="ComplexNumber.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
