--- a/COSII/COSII_Lab1/BLLServices/BLLServices.csproj
+++ b/COSII/COSII_Lab1/BLLServices/BLLServices.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComplexNumberHelper.cs" />
+    <Compile Include="FourierResults.cs" />
     <Compile Include="FourierTransform.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
